osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_secret_data/test_secret_type_fails_list[with-regular].txt
error: assignments can not include non-extractable features if they are not marked Secret
--> main.sml:3:0
     |
   3 | ListFoo = [Foo]
     | ^ name 'ListFoo' is not marked as non-extractable